profiling-using-exp-runner/backup_FINAL_RESULTS/knapsack_experiment/run_1_repetition_0/energibridge.log
sampling interval: 200, target function: knapsack_cache, input size: ((3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31), (10, 25, 35, 45, 60, 75, 85, 95, 110, 125, 140, 155, 165, 180, 195), 50)
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import memory.knapsack as module; weights = (3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31); values = (10, 25, 35, 45, 60, 75, 85, 95, 110, 125, 140, 155, 165, 180, 195); capacity = 50; module.knapsack_cache(weights, values, capacity); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.627434047698975 for 0.23363891 sec of execution.
